data/derived/comb/progs/unify/prog4756.ml.out
Characters 59-62:
  wwhile(f, f b);;
            ^^^
Error: This expression has type ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a
